--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>Spring4xchapter12</artifactId>
 	<version>1.0</version>
     <name>Spring4xchapter12</name>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>commons-lang</groupId>
