--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,7 @@
-log4j.rootLogger=INFO,A1
+log4j.rootLogger=DEBUG,A1,R
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.A1.Threshold=DEBUG
 #log4j.appender.A1.layout.ConversionPattern=(%F:%L) - %m%n
 log4j.appender.A1.layout.ConversionPattern=%m%n
 log4j.logger.org.springframework.jdbc=DEBUG
